# ehal

./: .gitignore  Doxyfile  LICENCE.txt  LOG.asciidoc  LOG.txt  Makefile  Makefile.am  Makefile.avr  Makefile.lpc21xx  README.asciidoc  README.txt  architecture.mp  configure.ac  ehal.tex  index.html  modules.dot  test.asciidoc
doc/: Makefile  arch.dot  arch.mp  architecture.dot  architecture.txt  docgen.sh  ehal.tex  index.txt  modules.dot  pio.txt
doc/dot/: arch.dot
doc/examples/: pinex.c
doc/images/: arch.dot
doc/manual/: pio.txt
ehal/: cpu.h  pin.h  pio.h  port.h  queue.c  queue.h  rwl.h  spim.h  tinytypes.h  uart.h
ehal/avr/: cpu_specific.h  uart_getbaud.c  uart_x8.c
ehal/generic/: rwl.c
ehal/lpc17xx/: core_cm3.h  port_getdir.c  port_init.c  port_read.c  port_setdir.c  port_specific.h  port_write.c
ehal/msp430/: port.c
ehal/specific/avr/: config.c  config.h  pin_specific.h  pio.c  port.c  port_specific.h
ehal/specific/virtual/: pio.c
src/: pio.c  pio.h  spim.h  types.h
src/pio/: pio_pin_high.c  pio_pin_low.c
src/specific/atmega/: pio6.c  pio_dir.c  pio_port_dirmask.c  pio_port_pullupmask.c  pio_port_readmask.c  pio_port_validate.c  pio_port_valmask.c  pio_pullup.c  pio_read.c  pio_specific.h  pio_val.c  pio_validate.c  spim0.c  spim_init.c  spim_specific.h  spim_xmit.c
src/specific/attiny/: pio0.c  pio_dir.c  pio_port_pullupmask.c  pio_pullup.c  pio_read.c  pio_specific.h  pio_val.c
src/specific/avr/: pio.c  pio0.c  pio1.c  pio2.c  pio3.c  pio4.c  pio5.c  pio_specific.h  spim0.c
src/specific/lpc21xx/: lpc210x_gnuarm.h  pio_slow.c  (+1 more)
(+10 files in other folders)
