#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AM_INIT_AUTOMAKE( elau, [0.1] )
AC_CONFIG_SRCDIR([src/types.h])

AC_PROG_CC
AC_PROG_RANLIB

AM_PROG_CC_C_O

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
